certifications/cks/networkpolicies/ingress-backend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-backend
spec:
  podSelector:
    matchLabels:
      app: nginx-backend
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
  - ports:
    - port: 80
      protocol: TCP
