certifications/cks/networkpolicies/ingress-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
